# pb_shop

./: LICENSE  README.md  manage.py  pyproject.toml
cart/: admin.py  cart.py  models.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: cart_summary.html
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
pb_shop/: settings.py  urls.py  wsgi.py
pb_shop/main/: models.py  urls.py  views.py
pb_shop/main/templates/main/: catalog.html
pb_shop/pb_shop/: asgi.py  settings.py  urls.py
users/: forms.py  models.py
users/migrations/: 0001_initial.py
