[project]
name = "pb-shop"
version = "0.1.0"
description = "Магазин одежды \"Правый берег\""
authors = [
    {name = "Ruslan Nusalov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
